# ai-video-shorts-generator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.agents/skills/ai-video-shorts-generator/: SKILL.md
.agents/skills/ai-video-shorts-generator/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/homunculus/instincts/inherited/: ai-video-shorts-generator-instincts.yaml
.codex/: AGENTS.md
app/modules/: youtube_uploader.py
config/: settings.py
html-version/: index.html
src/: __init__.py
src/api/: jobs.py  schemas.py  server.py
src/cli/: main.py
src/models/: video_generator.py
src/utils/: config.py  video.py
tests/: conftest.py  test_video_generator.py  test_video_utils.py
